--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,9 @@
         "php": ">=8.0",
         "composer/installers": "^2.0"
     },
-    "require-dev": {
-        "squizlabs/php_codesniffer": "^3.7",
-        "wp-coding-standards/wpcs": "^3.0"
-    },
     "config": {
         "allow-plugins": {
-            "composer/installers": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "composer/installers": true
         }
     },
     "minimum-stability": "stable",
